// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledList renders with children inside (default) 1`] = `
<StyledList
  bigItems={false}
  boldItems={false}
  className=""
  hasEllipsis={false}
  isLinked={false}
  linesBetween={false}
>
  <ul
    className="StyledList-sc-1t1k18i-0 fTqTVq"
  >
    <li>
      First one
    </li>
    <li>
      Second one
    </li>
    <li>
      Third one
    </li>
  </ul>
</StyledList>
`;

exports[`StyledList renders with children inside (other styles) 1`] = `
<StyledList
  bigItems={true}
  boldItems={false}
  className=""
  hasEllipsis={false}
  isLinked={false}
  linesBetween={false}
>
  <ul
    className="StyledList-sc-1t1k18i-0 dBUNMX"
  >
    <li>
      First one
    </li>
    <li>
      Second one
    </li>
    <li>
      Third one
    </li>
  </ul>
</StyledList>
`;

exports[`StyledList renders with children inside (other styles) 2`] = `
<StyledList
  bigItems={false}
  boldItems={true}
  className=""
  hasEllipsis={false}
  isLinked={false}
  linesBetween={false}
>
  <ul
    className="StyledList-sc-1t1k18i-0 bCbWXc"
  >
    <li>
      First one
    </li>
    <li>
      Second one
    </li>
    <li>
      Third one
    </li>
  </ul>
</StyledList>
`;

exports[`StyledList renders with children inside (other styles) 3`] = `
<StyledList
  bigItems={false}
  boldItems={false}
  className=""
  hasEllipsis={true}
  isLinked={false}
  linesBetween={false}
>
  <ul
    className="StyledList-sc-1t1k18i-0 ldYGGv"
  >
    <li>
      First one
    </li>
    <li>
      Second one
    </li>
    <li>
      Third one
    </li>
  </ul>
</StyledList>
`;

exports[`StyledList renders with children inside (other styles) 4`] = `
<StyledList
  bigItems={false}
  boldItems={false}
  className=""
  hasEllipsis={false}
  isLinked={true}
  linesBetween={false}
>
  <ul
    className="StyledList-sc-1t1k18i-0 Hya-DR"
  >
    <li>
      First one
    </li>
    <li>
      Second one
    </li>
    <li>
      Third one
    </li>
  </ul>
</StyledList>
`;

exports[`StyledList renders with children inside (other styles) 5`] = `
<StyledList
  bigItems={false}
  boldItems={false}
  className=""
  hasEllipsis={false}
  isLinked={false}
  linesBetween={true}
>
  <ul
    className="StyledList-sc-1t1k18i-0 gEEGjg"
  >
    <li>
      First one
    </li>
    <li>
      Second one
    </li>
    <li>
      Third one
    </li>
  </ul>
</StyledList>
`;
